test/feature/UnicodeEscapeSequence/Error_Disabled.js
// Should not compile.
// Options: --unicode-escape-sequences=false
// SyntaxError: Unexpected token ILLEGAL: expected false to be true

"\u{0}";
